--- a/clases/clase3/index.html
+++ b/clases/clase3/index.html
@@ -1,60 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantico</title>
+    <title>Mi primer sitio</title>
 </head>
-<body> 
-    <header>
-        <nav>
-            <a href="https://developer.mozilla.org/es/docs/HTML/HTML5/HTML5_lista_elementos">etiquetas</a>
-         </nav>
 
+<body>
+    <header>
+        <h1>
+             Hola soy el header
+        </h1>
+        <a href="http://https://www.mercadolibre.com.co/">
+        Ir a mercado libre 
+        </a>
     </header>
     <main>
-        <section id="Comidas">
-            <h1>Comidas del mundo</h1>
-            <figure>
-        
-                <img src="./comidas-raras-mundo.jpg" alt="Imagen que ilustra las comidas del mundo"width="450"height="250">
-                <figcaption>Ilustracion comidas a nivel mundial</figcaption>
-            </figure>
-            <section id="Española">
-                <h2>Comidas de españa</h2>
-                <ul>
-                    <li>Pella</li>
-                    <li>Pastas a la española</li>
-                    <li>chiguiro español</li>
-                </ul>
-                <div id="fotos platos">
-                    <figure id="">
-                        <img src="descarga.jpg" alt="Imagen de un plato de paella española">
-                    </figure>
-                </div>
-
-            </section>
-            <section id="Colombiana">
-                <h2>Comida de colombia</h2>
-                <ul>
-                    <li>Bandeja paisa</li>
-                    <li>Ajiaco</li>
-                    <li>sancocho</li>
-                </ul>
-                <video src="./comida.mp4" controls></video>
-            </section>
-
-        </section>
-        <article id="1984">
-            <h1>Esto es un resumen del libro</h1>
-        </article>
+        <h1>
+            Soy el contenido central
+        </h1> 
+        <h1>Hola soy un titulo grande</h1>
+        <h2>Hola soy un subtitulo</h2>
+        <h3>Soy otro titulo</h3>
+        <h4>más pequeño</h4>
+        <h5>pequeño</h5>
+        <h6>enano</h6>
+        <p>Este es mi primer sitio y estoy aprendiendo</p>
     </main>
     <footer>
-        <address>
-            <a href="email:melany202@hotmail.com">mandar correo</a>
-        </address>
-
-    </footer> 
+        <h1>
+            Soy el contenido final
+        </h1>
     
+    </footer>
 </body>
+
 </html>
